Fix Bug on Safari

--- a/steff-wedding/src/app/navigation/navigation.component.sass
+++ b/steff-wedding/src/app/navigation/navigation.component.sass
@@ -35,18 +35,11 @@ $SWOGAN-BAR-HEIGHT: 2 * $SWOGAN-BAR-PADDING + 6rem
   @include base
   content: ''
   z-index: -2
-  $blur: 0rem
   background-image: bgurl('banner')
   background-position: center 60%
   background-size: cover
   background-repeat: no-repeat
-  filter: blur($blur)
-
-  &-base
-    @include base
-    content: ''
-    z-index: -3
-    background-color: #534b46
+  -webkit-transform: translate3d(0, 0, 0)
 
 .swogan-logo
   $height: $SWOGAN-BAR-HEIGHT - 2 * $SWOGAN-BAR-PADDING - 1rem
